added postgres db and docker-file

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 SERVER_PORT=:8080
+
+DB_HOST=postgres
+DB_USER=user
+DB_PASSWORD=111effectivmobile
+DB_NAME=fiostore
+DB_PORT=5432
+
+EMAIL=mvolchanin@mail.ru
